tests/ui/coercion/multistep5.stderr
error[E0055]: reached the recursion limit while auto-dereferencing `P`
  --> $DIR/multistep5.rs:71:14
   |
LL |         1 => &P      as &P,
   |              ^^^^^^^^^^^^^ deref recursion limit reached
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`multistep5`)

error[E0055]: reached the recursion limit while auto-dereferencing `P`
  --> $DIR/multistep5.rs:75:18
   |
LL |     assert_eq!(a.complete(), vec!["self_ty P"]);
   |                  ^^^^^^^^ deref recursion limit reached
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`multistep5`)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0055`.
